@@ -197,6 +197,12 @@ nobase_dist_pkgdata_DATA = \
 	xilinx/xc2c256-tq144/xc2c256-tq144 \
 	xilinx/xc2c256-vq100/STEPPINGS \
 	xilinx/xc2c256-vq100/xc2c256-vq100 \
+	xilinx/xc2c32a-vq44/STEPPINGS \
+	xilinx/xc2c32a-vq44/xc2c32a-vq44 \
+	xilinx/xc2c32a-cp56/STEPPINGS \
+	xilinx/xc2c32a-cp56/xc2c32a-cp56 \
+	xilinx/xc2c32a-cv64/STEPPINGS \
+	xilinx/xc2c32a-cv64/xc2c32a-cv64 \
 	xilinx/xc2c64a-vq44/STEPPINGS \
 	xilinx/xc2c64a-vq44/xc2c64a-vq44 \
 	xilinx/xc2s200e-pq208/STEPPINGS \
